client/src/main.styl
@font-face {
  font-family: Poppins-Regular;
  src: url('./assets/fonts/poppins/Poppins-Regular.ttf');
}

@font-face {
  font-family: Poppins-Medium;
  src: url('./assets/fonts/poppins/Poppins-Medium.ttf');
}

@font-face {
  font-family: Poppins-Bold;
  src: url('./assets/fonts/poppins/Poppins-Bold.ttf');
}

@font-face {
  font-family: Poppins-SemiBold;
  src: url('./assets/fonts/poppins/Poppins-SemiBold.ttf');
}

a {
  text-decoration: none;
}

body {
  font-family: 'Poppins-Regular', Helvetica, Arial, sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2c3e50;
}

h2 {
  font-family: 'Poppins-Regular', Arial, Helvetica, sans-serif;
  font-size: 2.5em;
  font-weight: normal;
  color: #777;
}

h3 {
  font-family: 'Poppins-Regular', Arial, Helvetica, sans-serif;
  color: #333;
  font-size: 1.5em;
}

.text--center {
  text-align: center;
}

.u-flex {
  display: flex;

  &--v-center {
    align-items: center;
  }

  &--v-baseline {
    align-items: baseline;
  }

  &--v-end {
    align-items: flex-end;
  }

  &--center {
    justify-content: center;
    align-items: center;

    &-on-mobile {
      @media (max-width: 599px) {
        justify-content: center;
        align-items: center;
      }
    }
  }

  &--space-between {
    justify-content: space-between;
  }

  &--column {
    flex-direction: column;

    &-on-mobile {
      @media (max-width: 599px) {
        flex-direction: column;
      }
    }

    &-on-tablet {
      @media (max-width: 767px) {
        flex-direction: column;
      }
    }
  }

  &__item {
    flex: 1 1 auto;

    &--grow {
      flex-grow: 1;
    }
  }
}

.col-red {
  color: #c00;
}

.u-separator {
  width: 100%;
  margin: 10px auto 15px;
  position: relative;
  height: 1px;
  backface-visibility: hidden;
  transform: translateZ(0) scale(1, 1);
  color: transparent;
  border: none;

  &::after {
    position: absolute;
    width: 100%;
    left: 0;
    bottom: -1px;
    height: 2px;
    background: #fff;
    background: linear-gradient(to right, transparent 0%, rgba(255, 255, 255, 0.09) 35%, rgba(255, 255, 255, 0.09) 70%, transparent 100%);
    content: "";
  }
}

.u-max-width {
  max-width: 1140px;
  margin-right: auto;
  margin-left: auto;

  &-parent {
    .v-toolbar__content {
      max-width: 1140px;
      margin-right: auto;
      margin-left: auto;
    }
  }
}

.u-full-width {
  width: 100%;
  max-width: 100vw;
}

.u-fixed-header {
  position: fixed;
}

.u-only-on-desktop {
  @media (max-width: 599px) {
    display: none;
  }
}

.u-only-on-mobile {
  @media (min-width: 600px) {
    display: none;
  }
}

.candidat-section-header {
  font-family: 'Poppins-Regular', Arial, Helvetica, sans-serif;
  position: relative;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;

  &::after {
    content: '';
    width: 60px;
    height: 5px;
    background: #f82249;
    bottom: 0;
    margin-bottom: 1em;
  }

  &__title {
    font-size: 2.5rem;
    text-transform: uppercase;
    text-align: center;
    font-weight: 700;
    margin-bottom: 10px;
  }
}

.candidat .v-card {
  padding-top: 1em;
  padding-bottom: 1em;

  @media (min-width: 599px) {
    border-radius: 1em;
  }

  @media (max-width: 599px) {
    width: 95vw;
  }
}

.c-icon-hexagon {
  fill: rgba(200, 200, 200, 0.5);

  .active & {
    fill: rgba(100, 100, 100, 0.8);
    stroke: rgba(200, 0, 0, 1);
  }
}

